Fix mobile text alignments and smaller connect buttons

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -43,6 +43,10 @@
   max-width: 700px;
   text-align: center;
 
+  @media screen and (max-width: 1000px) {
+    text-align: left;
+  }
+
   h1 {
     margin-bottom: 10px;
   }
